# air_pollutions_sensor_waspmote_tlt

./: CMakeLists.txt  LICENSE  default.nix  package.xml  setup.py
docs/: communication.md
ed25519-secrets/: Makefile  generate.hs
launch/: agent.launch  air_sensor.launch  publisher_node.launch  sensor_agent.launch  sensor_node.launch  sensor_server.launch
models/: MODELS.md  model.bag  objective.bag
msg/: Measurement.msg
scripts/: agent_node  agent_node.py  create_bags.py  publisher_node  sensor_node  sensor_node.py  sensor_server  sensor_server.py  sensor_socket.py  storage_node
secrets/: SECRETS.md
src/air_pollutions_sensor_waspmote_tlt/: keygen.py  measurements_schema.sql  waspframe_parser.py  waspmote_gateway.py
waspmote/: sensor_firmware.pde
waspmote/air_pollutions_sensor_waspmote_tlt/: air_pollutions_sensor_waspmote_tlt.pde  secrets.h
waspmote/smart_city_poc_waspmote_akkol/: smart_city_poc_waspmote_akkol.pde
