<?xml version="1.0"?>
<package format="2">
  <name>air_sensor</name>
  <version>0.0.0</version>
  <description>The air_sensor package</description>
  <maintainer email="alisher@aira.life">Alisher A. Khassanov</maintainer>
  <license>BSD3</license>
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robonomics_liability</build_depend>
  <build_depend>robonomics_lighthouse</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>robonomics_liability</build_export_depend>
  <build_export_depend>robonomics_lighthouse</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>robonomics_liability</exec_depend>
  <exec_depend>robonomics_lighthouse</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
