<?xml version="1.0"?>
<package format="2">
  <name>air_pollutions_sensor_waspmote_tlt</name>
  <version>0.1.1</version>
  <description>The air_pollutions_sensor_waspmote_tlt package</description>
  <maintainer email="alisher@aira.life">Alisher A. Khassanov</maintainer>
  <license>BSD3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>

  <build_export_depend>rospy</build_export_depend>

  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
